--- a/Khanyo/style.css
+++ b/Khanyo/style.css
@@ -1,26 +1,30 @@
 body {
-    background-color: rgb(145, 210, 231);
+    margin: 150px;
+    background-color: rgb(16, 29, 25);
   }
   
   h1 {
-    color: rgb(52, 26, 95);
+    color: rgb(25, 145, 182);
     margin-left: 150px;
+    margin-top: 75px;
   }
   
   p {
     font-family: verdana;
     font-size: 20px;
-    margin-left: 150px;
+    margin-left: 200px;
     font-style: oblique;
-    color: rgb(52, 26, 95);
-     
+    color: rgb(25, 145, 182);
+    margin-top: 50px;
   }
 
-  form {
-    font-size: 18px;
-    margin-left: 150px;
-    border-spacing: 14px;
-    color: rgb(52, 26, 95);
+  .home-sci {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 170px;
+    bottom: 260rem;
 
-  }
+}
 
